--- a/style.css
+++ b/style.css
@@ -1,27 +1,61 @@
-body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #70c5ce;
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-#introScreen {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+body {
     height: 100vh;
-    background-color: #70c5ce;
+    width: 100vw;
 }
 
-#gameContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.background {
     height: 100vh;
+    width: 100vw;
+    background-color: skyblue;
 }
 
-canvas {
-    border: 2px solid #000;
-    background-color: #fff;
+.bird {
+    height: 100px;
+    width: 160px;
+    position: fixed;
+    top: 40vh;
+    left: 30vw;
+    z-index: 100;
+}
+
+.pipe_sprite {
+    position: fixed;
+    top: 40vh;
+    left: 100vw;
+    height: 70vh;
+    width: 6vw;
+    background-color: green;
+}
+
+.message {
+    position: fixed;
+    z-index: 10;
+    height: 10vh;
+    font-size: 10vh;
+    font-weight: 100;
+    color: black;
+    top: 12vh;
+    left: 20vw;
+    text-align: center;
+}
+
+.score {
+    position: fixed;
+    z-index: 10;
+    height: 10vh;
+    font-size: 10vh;
+    font-weight: 100;
+    color: goldenrod;
+    top: 0;
+    left: 0;
+}
+
+.score_val {
+    color: gold;
 }
